Add common problems solutions